Fix overflow scroll and WUC page

--- a/style.css
+++ b/style.css
@@ -630,7 +630,15 @@ a:focus {
 	outline: thin dotted;
 }
 
-a:hover, a:active {
+a:hover {
+	background-color: rgb(0, 19, 122);
+	color: #fff;
+	outline: 0;
+}
+
+a:active {
+	background-color: #cf311d;
+	color: #fff;
 	outline: 0;
 }
 
@@ -670,6 +678,7 @@ a:hover, a:active {
 	left: 100%;
 }
 
+/* Sub-menu items */
 .main-navigation ul ul a {
 	width: 200px;
 }
@@ -990,29 +999,40 @@ object {
 /*---------------------*/
 /* HEADER STYLES */
 /*---------------------*/
+html,body
+{
+    width: 100%;
+    margin: 0px;
+	padding: 0px;
+}
+
 .header-top-fixed {
-	background-color: lightgray;
+	background-color:#e1e1e1;
 	width: 100%;
-	height: 80px;
+	height: 60px;
 	position: fixed;
 	top: 0;
     left: 0;
 	display: flex;
-	justify-content: space-around;;
+	justify-content: space-between;
 	z-index: 900;
+	overflow: hidden;
 }
 
 .contact-us-image {
 	width: 40%;
+	margin: 0;
+	padding-top: 15px;
 }
 
 #block-header {
-    background: rgb(255, 255, 255);
-    position: relative;
+	background: #fff;
 	width: 100%;
+	height: 140px;
 	z-index: 900;
 	display: flex;
-	padding: 1em;
+	margin: 0;
+	padding: 0;
 }
 
 #block-header.sticky{
@@ -1020,18 +1040,24 @@ object {
     /* top: 80px; */
 }
 
-.main-header {
-    height: 100px;	
+.logo-div {
+	/* width: 30%; */
+	width: 24%;
+	position: relative;
 }
 
-.website-logo {
-	min-width: 250x;
-	max-width: 250px;
+.logo-div a img {
+	position: absolute;
+	/* top: 0; */
+	left: 50%;
+	top: 50%;
+	transform:translate(-50%, -50%);
+	display: block;
+	margin: 0 auto;
 }
 
 .social-media {
 	width: 60%;
-	/* line-height: 1; */
 	display: flex;
 	justify-content: flex-end;
 }
@@ -1040,14 +1066,18 @@ object {
 .social-media-home ul {
 	/* width: 20%; */
 	display: flex;
-	justify-content: space-around;
 	list-style-type: none;
 	padding: 0;
+	padding-right: 60px;
 }
 
 .social-media ul li,
 .social-media-home ul li {
-	padding: 2px;
+	padding: 10px 8px;
+}
+
+#home-icon {
+	padding-top: 18px; 
 }
 
 /* Header Banner Styles */
@@ -1056,38 +1086,179 @@ object {
 	height: 376px;
 }
 
+.banner-slide {
+	position: relative;
+}
 
+.banner-text {
+	background-color: rgba(205,205,196, 0.80);
+	color: #7f7d7d;
+	position: absolute;
+	height: 80px;
+	left: 20%;
+	top: 30%;
+	transform:translate(-20%, 50%);
+	width: 100%;
+	z-index: 2000;
+}
+
+.banner-text h1 {
+	text-align: center;
+}
 
 
 /*------------------------*/
 /* NAVIGATION MENU STYLES */
 /*------------------------*/
-.main-navigation {
+/* Website Under Construciton Page styles - temporary page */
+.wuc-banner {
 	width: 100%;
+}
+
+.wuc-banner img {
+	width: 100%;
+}
+
+.section-one {
+	background-color: #e0e0e0;
+	display: flex;
+	height: 400px;
+	margin: 10px 0;
+	padding: 2em 1em 0;
+	align-items: center;
+	justify-content: center;
+	font-size: 0;
+}
+
+.fb-icon {
+	width: 200px;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.wuc-text {
+	width: 420px;
+	flex-grow: 1;
+	padding-left: 15px;
+}
+
+.wuc-text h1 {
+	width: 420px;
+	color: #cd311b;
+	font-size: 34px;
+	line-height: 1.25;
+}
+
+.wuc-image {
+	width: 800px;
+	text-align: right;
+	/* padding-right: 80px; */
+
+}
+
+.wuc-image {
+	flex-grow: 2;
+}
+
+.section-two {
+	background-color: #e0e0e0;
+	margin: 0;
+	padding: 0 50px 30px;
+}
+
+.section-two h1 {
+	font-size: 50px;	
+}
+
+.section-two p {
+	font-size: 34px;
+	margin-top: 0 !important;
+}
+
+/* .wuc-main-navigation {
+	position: relative;
+	/* width: 67.25%; 
+	width: 75%;
+	line-height: 1em;
+	font-size: 0.9rem;
+	padding-top: 0;
+	height: 140px;
+	transform: skew(-30deg);
+	background-color:#e3e3e3;	
+} */
+
+/* .wuc-main-navigation  h1{
+	position: absolute;
+	left: 35%;
+	top: 25%;
+	transform:translate(-50%, -50%);
+	transform: skew(30deg);
+	color: #797778;
+} */
+
+/*===========================================================*/
+
+.main-navigation {
+	width: 73%;
 	text-transform: uppercase;
 	line-height: 1em;
 	font-size: 0.9rem;
 	letter-spacing: 0.03rem;
 	/* font-weight: 600; */
-	padding-right: 1rem;
+	/* padding-right: 1rem; */
+	padding-top: 0;
+	height: 140px;
+	transform: skew(-30deg);
+	background-color:#e1e1e1;
+	/* background-color: yellow; */
 }
 
 .main-navigation ul {
 	display: flex;
-	justify-content: space-between;
+}
+
+.main-navigation ul li {
+	/* position: relative; */
+	width: 20%;
+	color: rgb(116, 116, 121);
+	transform: skew(30deg); /* INVERSE SKEW */
 }
 
 .main-navigation ul li a {
-	color: rgb(116, 116, 121);
+	/* position: absolute;
+	left: 0;
+	top: 0;
+	transform:translate(-50%, -50%); */
+	height: 140px;
+	/* background-color: #cf311d; */
+	transform: skew(-30deg); /* INVERSE SKEW */
+	color: #000;
+	font-weight: 600;
+}
+
+.main-navigation ul li a:hover {
+	color: #fff;
+}
+
+.sub-menu {
+	background-color:#fff;
+	display: flex;
+	flex-direction: column;
+}
+
+.sub-menu li,
+.sub-menu li a {
+	height: 20px;
 }
 
 /*---------------------*/
 /* BODY STYLES */
 /*---------------------*/
 body {
+	width:100%;
+	overflow-x: hidden;
 	height: 100vh; /* remove white space below footer */
 	font-family: 'Helvetica', 'Arial', sans-serif;
-	max-width: 1920px;
 	/* background-color: lightpink; */
 }
 
@@ -1169,24 +1340,50 @@ body {
 /*---------------------*/
 /* BODY SECTION STYLES */
 /*---------------------*/
-/* .key-projects {
-	/* width: 960px;
-	text-align: center;
-} */
-
-.key-projects {
-	width: 100%;
-	height: 400px;
-	margin: 0 auto;
+.projects-slider {
+	background-color: #e0e0e0;
+	height: 450px;
+	position: relative;
 	padding: 1em;
-	background-color: rgb(214, 216, 218);
+	z-index:777;	
 }
 
-.key-projects h3 {
+.key-heading {
 	text-align: center;
 	text-transform: uppercase;
 }
 
+.projects-slide {
+	width: 1000px;
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	left: 50%;
+	top: 50%;
+	transform:translate(-50%, -50%);
+	display: flex;
+	flex: 1;
+	justify-content: space-between;
+	z-index: 778;
+	/* background-color: pink;
+	padding-left: 40px; */
+}
+
+.project-slides img {
+	margin: 0 auto;
+}
+
+.project-slides h4 {
+	padding: 0;
+	text-align: center;
+}
+
+.project-slides p {
+	width: 180px;
+	margin: 0 auto;
+	padding: 0;
+	font-size: 14px;
+}
 
 .newsletter-social,
 .exhib-news {
